Test/dafny0/ModulesCycle.dfy.expect
ModulesCycle.dfy(5,9): Error: module T does not exist
ModulesCycle.dfy(8,7): Error: module definition contains a cycle (note: parent modules implicitly depend on submodules): A -> B -> C -> D
ModulesCycle.dfy(16,7): Error: module definition contains a cycle (note: parent modules implicitly depend on submodules): Kevin -> Joe -> Nick -> Frankie -> Frankie -> Kevin
3 resolution/type errors detected in ModulesCycle.dfy
